--- a/conf/setup_guide.toml
+++ b/conf/setup_guide.toml
@@ -21,7 +21,7 @@ Forth = ["gforth main.fs"]
 Go = ["go build -o myapp", "./myapp"]
 Groovy = ["grape install", "groovy main.groovy"]
 Haskell = ["ghc -o myapp main.hs", "./myapp"]
-Java = ["mvn clean install", "java -jar target/myapp.jar"]
+Java = ["mvn clean install || gradle build", "java -jar target/myapp.jar"]
 JavaScript = ["npm install", "npm start"]
 Julia = ["julia --project -e 'import Pkg; Pkg.instantiate()'", "julia main.jl"]
 Kotlin = ["gradle build", "java -jar build/libs/myapp.jar"]
