--- a/conf/conf.toml
+++ b/conf/conf.toml
@@ -1,11 +1,11 @@
 # OpenAI API language model parameters
 [api]
 api_key = ""
-prompt_intro = """Generate a 2-3 sentence summary that describes the capabilities of the GitHub project {}."""
-prompt_slogan = """Generate a slogan for the GitHub project {}."""
+prompt_intro = """Generate a 3 sentence summary that describes the capabilities of the Git project {}."""
+prompt_slogan = """Generate a slogan for the Git project {}."""
 
 # Repository (local and remote)
-[github]
+[git]
 local = ""
 name = ""
 path = ""
