Issue-13: add support for GitLab repositories.

--- a/conf/conf.toml
+++ b/conf/conf.toml
@@ -1,8 +1,8 @@
 # OpenAI API language model parameters
 [api]
 api_key = ""
-prompt_intro = """Generate a 3 sentence summary that describes the capabilities of the Git project {}."""
-prompt_slogan = """Generate a slogan for the Git project {}."""
+prompt_intro = """Generate a 2-3 sentence summary that describes the capabilities of the GitHub project {}."""
+prompt_slogan = """Generate a slogan for the GitHub project {}."""
 
 # Repository (local and remote)
 [git]
