--- a/conf/language_names.toml
+++ b/conf/language_names.toml
@@ -1,21 +1,20 @@
+# Programming language file extensions and their corresponding names
 
-# Map file extensions to programming languages.
-[file_extensions]
+[language_names]
 asm = "Assembly"
 c = "C"
-cfg = "CFG"
-cmake = "CMake"
+cmake = "C"
 coffee = "CoffeeScript"
-cpp = "C++"
-cs = "C#"
-csproj = "XML"
+cpp = "CPlusPlus"
+cs = "CSharp"
+csproj = "CSharp"
 dart = "Dart"
-fs = "F#"
-fsi = "F#"
+fs = "FSharp"
+fsi = "FSharp"
 go = "Go"
 groovy = "Groovy"
 h = "C"
-hpp = "C++"
+hpp = "CPlusPlus"
 hs = "Haskell"
 html = "HTML"
 ipynb = "Jupyter Notebook"
@@ -25,9 +24,9 @@ js = "JavaScript"
 json = "JSON"
 kt = "Kotlin"
 lua = "Lua"
-m = "Objective-C"
+m = "ObjectiveC"
 md = "Markdown"
-mm = "Objective-C++"
+mm = "CPP"
 php = "PHP"
 pl = "Perl"
 ps1 = "PowerShell"
