--- a/conf/language_setup.toml
+++ b/conf/language_setup.toml
@@ -1,33 +1,26 @@
-# Instruction guide for installation and running programming languages
+# Programming language setup and run instructions
 
-[setup]
-ABAP = ["abap build", "abap run"]
-ActionScript = ["mxmlc main.as", "flashplayer main.swf"]
-Ada = ["gnatmake main.adb", "./main"]
-Apex = ["sfdx force:source:deploy -p force-app/main/default", "sfdx force:apex:execute -f main.apex"]
-Assembly = ["nasm -f elf64 main.asm && ld main.o -o myapp", "./myapp"]
-COBOL = ["cobc -x -o myapp main.cob", "./myapp"]
+[language_setup]
 C = ["gcc -o myapp main.c", "./myapp"]
-CPlusPlus = ["g++ -o myapp main.cpp", "./myapp"]
+CPP = ["g++ -o myapp main.cpp", "./myapp"]
 CSharp = ["dotnet build", "dotnet run"]
 CoffeeScript = ["npm install", "coffee main.coffee"]
 Crystal = ["shards install", "./main"]
 D = ["dmd main.d", "./main"]
 Dart = ["pub get", "dart main.dart"]
 Delphi = ["dcc32 main.dpr", "main.exe"]
-Elixir = ["mix deps.get", "mix run main.exs"]
+Elixir = ["mix deps.get", "mix run"]
 FS = ["dotnet build", "dotnet run"]
-Forth = ["gforth main.fs"]
 Go = ["go build -o myapp", "./myapp"]
 Groovy = ["grape install", "groovy main.groovy"]
 Haskell = ["ghc -o myapp main.hs", "./myapp"]
-Java = ["mvn clean install || gradle build", "java -jar target/myapp.jar"]
+Java = ["mvn clean install", "java -jar target/myapp.jar"]
 JavaScript = ["npm install", "npm start"]
 Julia = ["julia --project -e 'import Pkg; Pkg.instantiate()'", "julia main.jl"]
 Kotlin = ["gradle build", "java -jar build/libs/myapp.jar"]
 Lua = ["luarocks install --only-deps myapp", "lua main.lua"]
 MATLAB = ["matlab -r main.m"]
-Objective-C = ["gcc -framework Foundation main.m -o myapp", "./myapp"]
+ObjectiveC = ["gcc -framework Foundation main.m -o myapp", "./myapp"]
 CPP = ["g++ -o myapp main.mm", "./myapp"]
 ObjectScript = ["zpm install", "do ##class(User.MyClass).Main()"]
 Perl = ["cpanm --installdeps .", "perl main.pl"]
