Restructure and clean  LLM text generation code.

--- a/conf/ignore_files.toml
+++ b/conf/ignore_files.toml
@@ -69,6 +69,10 @@ ignore_files = [
     "*.o",
 
     # Version control
+    ".flake8",
+    ".dvc",
+    ".dvcignore",
+    ".gitignore",
     ".git",
     ".svn",
     ".hg",
