Add support for TypeScript repositories.

--- a/conf/language_setup.toml
+++ b/conf/language_setup.toml
@@ -15,7 +15,7 @@ Go = ["go build -o myapp", "./myapp"]
 Groovy = ["grape install", "groovy main.groovy"]
 Haskell = ["ghc -o myapp main.hs", "./myapp"]
 Java = ["mvn clean install", "java -jar target/myapp.jar"]
-JavaScript = ["npm install", "npm start"]
+JavaScript = ["npm install", "node app.js"]
 Julia = ["julia --project -e 'import Pkg; Pkg.instantiate()'", "julia main.jl"]
 Kotlin = ["gradle build", "java -jar build/libs/myapp.jar"]
 Lua = ["luarocks install --only-deps myapp", "lua main.lua"]
