--- a/conf/ignore_files.toml
+++ b/conf/ignore_files.toml
@@ -80,7 +80,7 @@ ignore_files = [
     ".cvs",
 
     # Editor and IDE settings
-    ".github/workflows",
+    #".github/workflows",
     ".vscode",
     ".idea",
     "*.sublime-*",
