--- a/conf/language_names.toml
+++ b/conf/language_names.toml
@@ -21,6 +21,7 @@ ipynb = "Jupyter Notebook"
 java = "Java"
 jl = "Julia"
 js = "JavaScript"
+mjs = "JavaScript"
 json = "JSON"
 kt = "Kotlin"
 lua = "Lua"
