--- a/setup/environment.yaml
+++ b/setup/environment.yaml
@@ -1,9 +1,7 @@
-name: readmeai
+name: base
 channels:
   - conda-forge
   - defaults
 dependencies:
-  - python>=3.9
+  - python>=3.9,<3.12
   - pip
-  - pip:
-    - openapi-python-client
