--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,4 @@
-# Pre-commit hooks configuration file
+# Pre-commit configuration file
 
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
