--- a/conf/ignore_files.toml
+++ b/conf/ignore_files.toml
@@ -1,113 +1,140 @@
 # Files to ignore when parsing repository contents.
 
 [ignore_files]
-ignore_files = [
-    # Build artifacts
-    "dist",
-    "*.egg-info",
+directories = [
+    ".DS_Store",
+    ".dvc",
     ".eggs",
-    ".coverage",
-    ".cache",
+    ".git",
+    ".hg",
     ".pytest_cache",
-    "htmlcov",
+    ".svn",
     ".tox",
-
-    # Data files
+    ".vscode",
+    "assets",
     "data",
-    ".csv",
-    ".json",
-    ".pickle",
-    ".pkl",
-    ".sav",
-    ".toml",
-    ".tsv",
-    ".txt",
-    ".h5",
-
-    # Documentation
+    "dist",
     "docs",
-    ".pdf",
-    ".docx",
-    ".md",
-
-    # Images and media
+    "htmlcov",
     "imgs",
+    "lock",
     "media",
     "static",
-    "assets",
-    ".png",
-    ".jpg",
-    ".gif",
-    ".mp4",
-
-    # Configuration files and credentials
-    "lock",
-    ".env",
-    ".env.local",
-    ".env.*.local",
-    ".env.test",
-    ".env.production",
-    ".env.example",
-    ".config",
-    ".cfg",
-    ".ini",
-    ".yml",
-    ".yaml",
-    ".xml",
-    ".properties",
-    ".secret",
-    ".key",
-    ".pem",
-    ".cert",
-    ".csr",
-    ".p12",
-    ".sum",
-
-    # Compiled code
-    "__init__",
-    "__pycache__",
-    "*.pyc",
-    "*.pyo",
-    "*.class",
-    "*.o",
-
-    # Version control
-    ".flake8",
-    ".dvc",
-    ".git",
-    ".svn",
-    ".hg",
-    ".cvs",
-
-    # Editor and IDE settings
-    #".github/workflows",
-    ".vscode",
-    ".idea",
-    "*.sublime-*",
-    "*.swp",
-
-    # Test and utility files
-    #"test",
     "tests",
     "testing",
     "tools",
-    #"utils",
-    "requirements",
-    "setup",
-    "Makefile",
-    "MANIFEST",
-    "CHANGELOG",
-    "README",
-    "LICENSE",
-    "CONTRIBUTING",
-    "CODE_OF_CONDUCT",
-    "Dockerfile",
-    "Jenkinsfile",
-    "Vagrantfile",
-
-    # Ignore File
+    "__pycache__",
+    ".idea",
+]
+extensions = [
+    ".cache",
+    #".cfg",
+    ".cert",
+    ".class",
+    ".config",
+    ".coverage",
+    ".csv",
+    ".docx",
+    ".egg-info",
+    ".env",
+    ".env.example",
+    ".env.local",
+    ".env.production",
+    ".env.test",
+    ".gif",
+    ".h5",
+    ".ini",
+    ".jpg",
+    ".json",
+    ".jsonl",
+    ".json5",
+    ".key",
+    ".md",
+    ".mp4",
+    ".o",
+    ".p12",
+    ".pdf",
+    ".pem",
+    ".pickle",
+    ".pkl",
+    ".properties",
+    ".pyc",
+    ".pyo",
+    ".sav",
+    ".secret",
+    ".sublime-*",
+    ".sum",
+    ".swp",
+    #".toml",
+    ".tsv",
+    ".txt",
+    ".xml",
+    #".yaml",
+    #".yml",
+    ".zip",
+    ".xlsx",
+    ".xls",
+    ".exe",
+    ".dll",
+    ".bak",
+    ".bakup",
+    ".old",
+    ".tmp",
+    ".png",
+    ".jpeg",
+    ".bmp",
+    ".svg",
+    ".ico",
+    ".webp",
+    ".tiff",
+    ".nsi",
+    ".nsh",
+    ".pub",
+    ".sig",
+    ".gz",
     ".gitignore",
+    ".icns",
+    ".DS_Store",
+    ".jar",
+    ".pro",
+    ".apk",
+]
+files = [
+    ".babelrc",
+    ".editorconfig",
+    "test_binary",
+    "icon.ico~dev",
+    ".env",
+    ".env.example",
+    ".env.local",
+    ".env.production",
+    ".env.test",
+    ".project-root",
+    ".gitattributes",
+    ".gitkeep",
+    ".gitmodules",
+    ".gitlab-ci.yml",
     ".dvcignore",
+    ".flake8",
+    ".gitignore",
     ".npmignore",
+    "appimage",
+    "badges.json",
+    "bundle_dmg",
+    "CHANGELOG",
+    "CODE_OF_CONDUCT.md",
+    "CONTRIBUTING.md",
+    "LICENSE",
+    "LICENSE-MIT",
+    "LICENSE-APACHE",
+    "LICENSE_APACHE-2.0",
+    "MANIFEST",
+    "README.md",
     ".dockerignore",
+    "start",
+    "gradlew",
+    ".DS_Store",
+    ".gitignore",
+    ".whitesource",
+    ".prettierrc",
 ]
