--- a/conf/language_names.toml
+++ b/conf/language_names.toml
@@ -3,9 +3,9 @@
 [language_names]
 asm = "Assembly"
 c = "C"
-cmake = "C"
+cmake = "CMake"
 coffee = "CoffeeScript"
-cpp = "CPlusPlus"
+cpp = "CPP"
 cs = "CSharp"
 csproj = "CSharp"
 dart = "Dart"
@@ -14,13 +14,15 @@ fsi = "FSharp"
 go = "Go"
 groovy = "Groovy"
 h = "C"
-hpp = "CPlusPlus"
+hpp = "CPP"
 hs = "Haskell"
 html = "HTML"
-ipynb = "Jupyter Notebook"
+css = "CSS"
+ipynb = "JupyterNotebook"
 java = "Java"
 jl = "Julia"
 js = "JavaScript"
+jsx = "JavaScript"
 mjs = "JavaScript"
 json = "JSON"
 kt = "Kotlin"
@@ -41,6 +43,10 @@ s = "Assembly"
 scala = "Scala"
 sh = "Shell"
 sql = "SQL"
+pgsql = "PostgreSQL"
+mssql = "SQL Server"
+sqlite = "SQLite"
+mysql = "MySQL"
 svg = "SVG"
 swift = "Swift"
 swiftdeps = "Swift"
@@ -51,6 +57,13 @@ tsx = "TypeScript"
 txt = "Text"
 v = "Verilog"
 vh = "Verilog"
+vue = "Vue.js"
 xml = "XML"
 yaml = "YAML"
 yml = "YAML"
+Makefile = "Makefile"
+Dockerfile = "Dockerfile"
+svelte = "Svelte"
+wxs = "WiX"
+scss = "Sassy CSS"
+Pipfile = "Pipfile"
