--- a/conf/language_setup.toml
+++ b/conf/language_setup.toml
@@ -17,6 +17,7 @@ Haskell = ["ghc -o myapp main.hs", "./myapp"]
 Java = ["mvn clean install", "java -jar target/myapp.jar"]
 JavaScript = ["npm install", "node app.js"]
 Julia = ["julia --project -e 'import Pkg; Pkg.instantiate()'", "julia main.jl"]
+JupyterNotebook = ["pip install -r requirements.txt", "jupyter nbconvert --execute notebook.ipynb"]
 Kotlin = ["gradle build", "java -jar build/libs/myapp.jar"]
 Lua = ["luarocks install --only-deps myapp", "lua main.lua"]
 MATLAB = ["matlab -r main.m"]
@@ -39,3 +40,4 @@ Swift = ["swift build", ".build/debug/myapp"]
 TypeScript = ["npm install", "npm run build && node dist/main.js"]
 VBScript = ["cscript main.vbs"]
 VisualBasic = ["dotnet build", "dotnet run"]
+vue = ["npm install", "npm run serve"]
